; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_ucode.c_ucode_interface.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_ucode.c_ucode_interface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"-x\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"ucode: no updates in safe mode\0A\00", align 1
@EPERM = common dso_local global i32 0, align 4
@global_update = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ucode_interface(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [16 x i8], align 16
  store i32 %0, i32* %3, align 4
  %6 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %7 = call i64 @PE_parse_boot_argn(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %6, i32 16)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  %11 = load i32, i32* @EPERM, align 4
  store i32 %11, i32* %2, align 4
  br label %26

12:                                               ; preds = %1
  %13 = load i64, i64* @global_update, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = load i32, i32* @EPERM, align 4
  store i32 %16, i32* %2, align 4
  br label %26

17:                                               ; preds = %12
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @copyin_update(i32 %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %17
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %26

24:                                               ; preds = %17
  %25 = call i32 (...) @xcpu_update()
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %24, %22, %15, %9
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i64 @PE_parse_boot_argn(i8*, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @copyin_update(i32) #1

declare dso_local i32 @xcpu_update(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
